tests/baselines/reference/invalidUnicodeEscapeSequence.errors.txt
tests/cases/compiler/invalidUnicodeEscapeSequence.ts(1,8): error TS1127: Invalid character.


==== tests/cases/compiler/invalidUnicodeEscapeSequence.ts (1 errors) ====
    var arg\u003
           
!!! error TS1127: Invalid character.